--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                 <div class="card project-card">
                     <img src="blog platform.webp" class="card-img-top" alt="Project 3">
                     <div class="card-body">
-                        <h5 class="card-title">Blog Platform</h5>
-                        <p class="card-text">A sleek platform for publishing and managing blog content.</p>
+                        <h5 class="card-title">To Do List App</h5>
+                        <p class="card-text">An App to add daily goals and todos</p>
                         <a href="#" class="btn btn-outline-primary">Live Demo</a>
-                        <a href="https://github.com/ralph875/project-repo" class="btn btn-outline-secondary" target="_blank">GitHub</a>
+                        <a href="https://ralph875.github.io/portfolio/" class="btn btn-outline-secondary" target="_blank">GitHub</a>
 
                     </div>
                 </div>
