my modified file

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 </section>
 
 <!-- Projects Section -->
-<section id="projects" class="py-5 ">
-    <div class="container">
+    <div class="container" id="projects">
         <h2 class="text-center">My Projects</h2>
         <div class="row mt-4">
             <!-- Project 1 -->
@@ -147,6 +146,7 @@
                 <label for="message" class="form-label">Message</label>
                 <textarea class="form-control" id="message" rows="5" required></textarea>
             </div>
+<section id="projects" class="py-5 ">
             <button type="submit" class="btn btn-primary">Send</button>
         </form>
     </div>
@@ -166,6 +166,6 @@
 
 
 <script src="./bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
-    <script src="./bootstrap-5.3.3-dist/js/bootstrap.js"></script>
+    <script src="./bootstrap-5.3.3-dist/js/bootstrap.js"></script> 
 </body>
 </html>
